<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SyntaxActivity1">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:layout_gravity="center"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="Activities" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textAlignment="gravity"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@android:color/black"
        android:textStyle="normal"
        android:fontFamily="casual"
        android:textSize="12sp"
        android:text="@string/syntax1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:textAlignment="gravity"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@android:color/black"
        android:textStyle="normal"
        android:fontFamily="casual"
        android:textSize="12sp"
        android:text="@string/syntax111" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/darker_gray"
        android:orientation="vertical">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:textAlignment="gravity"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/black"
        android:textStyle="normal"
        android:fontFamily="casual"
        android:textSize="12sp"
        android:text="@string/syntax11" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:textAlignment="gravity"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@android:color/darker_gray"
            android:textColor="@android:color/black"
            android:textStyle="normal"
            android:fontFamily="casual"
            android:textSize="12sp"
            android:text="{" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:textAlignment="gravity"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@android:color/darker_gray"
            android:textColor="@android:color/black"
            android:textStyle="normal"
            android:fontFamily="casual"
            android:textSize="12sp"
            android:text="}" />

</LinearLayout>
</LinearLayout>